<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HappyPlaceDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:theme="@style/CustomToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_place_detail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_size_detail"
                    android:background="@drawable/image_border"
                    android:src="@drawable/ic_image"
                    android:layout_margin="@dimen/image_detail_margin"
                    android:padding="@dimen/image_padding"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/tv_desc_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/detail_text_color"
                    android:textSize="@dimen/desc_detail_size"
                    android:layout_margin="@dimen/location_detail_margin"
                    android:layout_marginTop="@dimen/margin_top_location_detail"/>

                <TextView
                    android:id="@+id/tv_location_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textStyle="bold"
                    android:textColor="@color/lightBlue"
                    android:textSize="@dimen/location_detail"
                    android:layout_marginStart="@dimen/location_detail_margin"
                    android:layout_marginEnd="@dimen/location_detail_margin"
                    android:layout_marginTop="@dimen/margin_top_location_detail"/>

                <Button
                    android:id="@+id/btn_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background = "@drawable/shape_btn"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/btn_margin_top_detail"
                    android:layout_marginStart="@dimen/btn_start_end_detail"
                    android:layout_marginEnd="@dimen/btn_start_end_detail"
                    android:paddingTop="@dimen/btn_padding_top_bottom"
                    android:paddingBottom="@dimen/btn_padding_top_bottom"
                    android:textSize="@dimen/btn_text_size"
                    android:text="@string/view_on_map"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>